# horoscope-platform

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  todo.txt
backend/: .env.example  README.md  alembic.ini  env.example  init_db.py  pyproject.toml  start.py
backend/alembic/: env.py
backend/alembic/versions/: 03b05c8608da_add_horoscope_related_tables.py  391f4e10d167_generate_tables.py  53d7b8dc9fd3_add_user_table.py  e2c0ae0e4529_add_role_managment_table.py  f48d73abd82f_rename_table.py
backend/horoscope_backend/: __init__.py  main.py
backend/horoscope_backend/api/v1/: api.py
backend/horoscope_backend/api/v1/endpoints/: ai_test.py  auth.py  health.py  horoscopes.py  profile.py  usage.py
backend/horoscope_backend/core/: config.py  database.py
backend/horoscope_backend/crud/: __init__.py  auth_crud.py  horoscope_crud.py  usage_crud.py
backend/horoscope_backend/models/: __init__.py  base.py  email_subscription.py  horoscope.py  horoscope_entry.py  usage.py  usage_tracking.py  user.py  user_config.py
backend/horoscope_backend/services/ai/: __init__.py  ai_provider_base.py  factory.py  openai_client.py
backend/horoscope_backend/services/auth/: __init__.py  auth_deps.py  auth_service.py
backend/horoscope_backend/services/horoscope_ai_service/: horoscope_ai_service.py
backend/horoscope_backend/utils/: common.py
backend/scripts/: generate_horoscope.py
backend/tests/: test_main.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
(+14 files in other folders)
