[tool.poetry]
name = "horoscope-platform"
version = "0.1.0"
description = "Horoscope Platform API"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "horoscope_backend"}]

[tool.poetry.dependencies]
python = "^3.8.1"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.23"
pydantic-settings = "^2.0.3"
python-dotenv = "^1.0.0"
openai = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pre-commit = "^3.6.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88
